[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tasktracker"
version = "0.1.0"
authors = [
  { name="Dennis Francis", email="dennisfrancis.in@gmail.com" },
]
description = "an offline CLI app to track your tasks and manage your to-do list"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
task-tracker = "tasktracker.tasktracker:main"

[project.urls]
Homepage = "https://github.com/dennisfrancis/task-tracker"
Issues = "https://github.com/dennisfrancis/task-tracker/issues"
